# aegis

./: .aegis.yaml.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  handoff-state.json  pyproject.toml
.github/workflows/: ci.yml
docs/: decomposition.md  roadmap.md
docs/handoffs/: phase1_impl_cycle.md  phase1_plan_cycle.md  phase2_impl_cycle.md  phase2_plan_cycle.md  phase3_impl_cycle.md  phase3_plan_cycle.md  phase4_impl_cycle.md  phase4_plan_cycle.md  phase5_impl_cycle.md  phase5_plan_cycle.md  phase6_plan_cycle.md
docs/phases/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
src/aegis_qa/: __init__.py  cli.py
src/aegis_qa/api/: __init__.py  app.py  auth.py
src/aegis_qa/api/routes/: health.py  portfolio.py  workflow_list.py  workflows.py
src/aegis_qa/config/: __init__.py  loader.py  models.py
src/aegis_qa/events/: __init__.py  emitter.py  log.py  webhook.py
src/aegis_qa/landing/: app.js  index.html  styles.css
src/aegis_qa/registry/: __init__.py  health.py  models.py  registry.py
src/aegis_qa/workflows/: __init__.py  history.py  history_sqlite.py  models.py  pipeline.py
src/aegis_qa/workflows/steps/: __init__.py  base.py  discover.py  report.py  submit_bugs.py  test.py  verify.py
tests/: conftest.py  test_api.py  test_auth.py  test_base_step.py  test_cli.py  test_config.py  test_events.py  test_history.py  test_integration.py  test_registry.py  test_report_step.py  test_workflows.py
